--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
       <div class="today-weather">
         <div class="today-main">
           <div id="city-name">{{cityName}}</div>
+          <div id="city-name">{{cityName2}}</div>
           <div id="date">{{date * 1000 | date: "yyyy-MM-dd"}}</div>
           <img ng-src={{icon}}
                id="weather-icon"/>
