--- a/app/index.html
+++ b/app/index.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Weather App | AngularJS</title>
-    <meta name="description" content="">
+    <meta name="Weather App" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="lib/html5-boilerplate/dist/css/normalize.css">
-    <link rel="stylesheet" href="lib/html5-boilerplate/dist/css/main.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
-    <script src="lib/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.min.js"></script>
+    <script src="app.js"></script>
   </head>
 
 
@@ -75,15 +74,5 @@
       </div>
 
     </div>
-
-
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.min.js"></script>
-    <script src="lib/angular/angular.js"></script>
-    <script src="lib/angular-route/angular-route.js"></script>
-    <script src="app.js"></script>
-    <script src="core/version/version.js"></script>
-    <script src="core/version/version-directive.js"></script>
-    <script src="core/version/interpolate-filter.js"></script>
-
   </body>
 </html>
